--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,17 +11,7 @@ repos:
       - id: check-yaml
       - id: check-added-large-files
       - id: detect-private-key
-  - repo: https://github.com/gruntwork-io/pre-commit
-    rev: v0.1.23
+  - repo: https://github.com/gitleaks/gitleaks
+    rev: v8.18.4
     hooks:
-      - id: terraform-fmt
-      - id: terraform-validate
-      # - id: tflint
-      # - id: sentinel-fmt
-      # - id: packer-validate
-      # - id: shellcheck
-      # - id: helmlint
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v1.2.3
-    hooks:
-      - id: trailing-whitespace
+      - id: gitleaks
